<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Marc Sluiter
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">RaspiDroid</string>
    <string name="help">Help</string>
    <string name="defaultUrl">ws://192.168.121.238:8888</string>
    <string name="defaultUrlHint">Websocket URL</string>
    <string name="defaultText">Hello World!</string>
    <string name="connectButtonOff">Disconnected</string>
    <string name="connectButtonOn">Connected</string>
    <string name="loopButtonOff">No Looping</string>
    <string name="loopButtonOn">Looping</string>
    <string name="sendTextButton">Send</string>
</resources>
